update new responsive

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -27,4 +27,16 @@
     height: auto;
     overflow: auto;
   }
+  .center{
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width:641px) and (max-width:1007px) {
+  .center{
+    flex-direction:column;
+  }
+  html{
+    font-size: 14px;
+  }
 }
