--- a/css/base.css
+++ b/css/base.css
@@ -1,9 +1,11 @@
 /**/
 :root {
   --primary-color: #00635a;
-  --secondary-color: #d92525;
+  --secondary-color: #f5f8ff;
   --neutral-color: #333333;
   --background-color: #f5f8ff;
+  --text-color: #021334;
+
   --primary-font: 'Dancing-Script', sans-serif;
   --secondary-font: 'edu-Qld', sans-serif;
 }
@@ -12,6 +14,14 @@
   justify-content: center;
   align-items: center;
 }
+.center-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
 /*general style: the style that going to apply in all elements*/
 html{
   background-color: var(--background-color);
@@ -38,7 +48,22 @@ h2{
   letter-spacing: 0.06rem;
   font-size: 1.8rem;
 }
+.text-logo {
+  color: aliceblue;
+}
 p{
   color: var(--neutral-color);
+  font-size: 1.1rem;
+  line-height: 25px;
+}
+
+.text-label {
+  background-color: white;
+  border: 1px solid var(--background-color);
+  padding: 0.5rem 1rem;
+  border-radius: 25px;
+  color: var(--primary-color);
+  font-weight: bold;
+  text-transform: uppercase;
   font-size: 1.1rem;
 }
