--- a/css/base.css
+++ b/css/base.css
@@ -40,6 +40,7 @@ h1{
   color: var(--primary-color);
   font-size: 2rem;
   text-transform: uppercase;
+  
 }
 h2{
   color: var(--neutral-color);
@@ -47,6 +48,7 @@ h2{
   font-weight: 400;
   letter-spacing: 0.06rem;
   font-size: 1.8rem;
+  font-family: 'pacifico', cursive;
 }
 .text-logo {
   color: aliceblue;
