--- a/css/section.css
+++ b/css/section.css
@@ -28,3 +28,62 @@
   justify-content: center;
   gap: 1rem;
 }
+/*project section*/
+.projects-section{
+  margin-top: 4rem;
+  max-width: 100%;
+}
+.project-card{
+  margin: 5px;
+  max-width: 30%;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  background-color: rgb(173, 198, 198);
+  border-radius: 8px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+
+}
+
+.project-card img{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0.5rem;
+  border-radius: 2%;
+}
+.projects-list{
+  margin: 0 auto;
+  border: solid 2px red;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  
+  
+}
+
+.project-skills {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0.5rem;
+  gap: 0.5rem;
+  border: 1px black;
+}
+.project-card a p:nth-child(2){
+  color: var(--primary-color);
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin: 0.5rem 0px;
+}
+.project-card a p:nth-child(3){
+  font-style: italic;
+}
+.project-card a p:nth-child(4){
+  font-weight: bold;
+}
+.project-card:hover{
+  transform: scale(1.08);
+  background-color: rgb(224, 112, 112);
+}
